fix: logo shadow on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
 @media (max-width: 640px) {
     .big-logo {
       width: 80%;
+      filter: drop-shadow(0 0 5rem #4129b88c);
     }
 }
 
